--- a/src/icons-reference.html
+++ b/src/icons-reference.html
@@ -55,6 +55,122 @@
           <div class="icon icon-repeat"></div>
           <input type="text" readonly="readonly" value="repeat">
         </li>
+        <li>
+          <div class="icon icon-heart-o"></div>
+          <input type="text" readonly="readonly" value="heart-o">
+        </li>
+        <li>
+          <div class="icon icon-heart"></div>
+          <input type="text" readonly="readonly" value="heart">
+        </li>
+        <li>
+          <div class="icon icon-sort-amount-asc"></div>
+          <input type="text" readonly="readonly" value="sort-amount-asc">
+        </li>
+        <li>
+          <div class="icon icon-sort-alpha-asc"></div>
+          <input type="text" readonly="readonly" value="sort-alpha-asc">
+        </li>
+        <li>
+          <div class="icon icon-sort-alpha-desc"></div>
+          <input type="text" readonly="readonly" value="sort-alpha-desc">
+        </li>
+        <li>
+          <div class="icon icon-sort-amount-desc"></div>
+          <input type="text" readonly="readonly" value="sort-amount-desc">
+        </li>
+        <li>
+          <div class="icon icon-thumbs-up"></div>
+          <input type="text" readonly="readonly" value="thumbs-up">
+        </li>
+        <li>
+          <div class="icon icon-thumbs-o-up"></div>
+          <input type="text" readonly="readonly" value="thumbs-o-up">
+        </li>
+        <li>
+          <div class="icon icon-user"></div>
+          <input type="text" readonly="readonly" value="user">
+        </li>
+        <li>
+          <div class="icon icon-trash"></div>
+          <input type="text" readonly="readonly" value="trash">
+        </li>
+        <li>
+          <div class="icon icon-trash-o"></div>
+          <input type="text" readonly="readonly" value="trash-o">
+        </li>
+        <li>
+          <div class="icon icon-note-beamed"></div>
+          <input type="text" readonly="readonly" value="note-beamed">
+        </li>
+        <li>
+          <div class="icon icon-plus"></div>
+          <input type="text" readonly="readonly" value="plus">
+        </li>
+        <li>
+          <div class="icon icon-search"></div>
+          <input type="text" readonly="readonly" value="search">
+        </li>
+        <li>
+          <div class="icon icon-mute"></div>
+          <input type="text" readonly="readonly" value="mute">
+        </li>
+        <li>
+          <div class="icon icon-playback-fast-forward"></div>
+          <input type="text" readonly="readonly" value="playback-fast-forward">
+        </li>
+        <li>
+          <div class="icon icon-playback-pause"></div>
+          <input type="text" readonly="readonly" value="playback-pause">
+        </li>
+        <li>
+          <div class="icon icon-playback-play"></div>
+          <input type="text" readonly="readonly" value="playback-play">
+        </li>
+        <li>
+          <div class="icon icon-playback-rewind"></div>
+          <input type="text" readonly="readonly" value="playback-rewind">
+        </li>
+        <li>
+          <div class="icon icon-jump-left"></div>
+          <input type="text" readonly="readonly" value="jump-left">
+        </li>
+        <li>
+          <div class="icon icon-jump-right"></div>
+          <input type="text" readonly="readonly" value="jump-right">
+        </li>
+        <li>
+          <div class="icon icon-primitive-square"></div>
+          <input type="text" readonly="readonly" value="primitive-square">
+        </li>
+        <li>
+          <div class="icon icon-git-compare"></div>
+          <input type="text" readonly="readonly" value="git-compare">
+        </li>
+        <li>
+          <div class="icon icon-mail-reply"></div>
+          <input type="text" readonly="readonly" value="mail-reply">
+        </li>
+        <li>
+          <div class="icon icon-pulse"></div>
+          <input type="text" readonly="readonly" value="pulse">
+        </li>
+        <li>
+          <div class="icon icon-home"></div>
+          <input type="text" readonly="readonly" value="home">
+        </li>
+        <li>
+          <div class="icon icon-cloud-upload"></div>
+          <input type="text" readonly="readonly" value="cloud-upload">
+        </li>
+        <li>
+          <div class="icon icon-cloud-download"></div>
+          <input type="text" readonly="readonly" value="cloud-download">
+        </li>
+        <li>
+          <div class="icon icon-sign-out"></div>
+          <input type="text" readonly="readonly" value="sign-out">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -97,6 +213,122 @@
         <li>
           <div data-icon="k" class="icon"></div>
           <input type="text" readonly="readonly" value="k">
+        </li>
+        <li>
+          <div data-icon="a" class="icon"></div>
+          <input type="text" readonly="readonly" value="a">
+        </li>
+        <li>
+          <div data-icon="l" class="icon"></div>
+          <input type="text" readonly="readonly" value="l">
+        </li>
+        <li>
+          <div data-icon="m" class="icon"></div>
+          <input type="text" readonly="readonly" value="m">
+        </li>
+        <li>
+          <div data-icon="n" class="icon"></div>
+          <input type="text" readonly="readonly" value="n">
+        </li>
+        <li>
+          <div data-icon="o" class="icon"></div>
+          <input type="text" readonly="readonly" value="o">
+        </li>
+        <li>
+          <div data-icon="p" class="icon"></div>
+          <input type="text" readonly="readonly" value="p">
+        </li>
+        <li>
+          <div data-icon="q" class="icon"></div>
+          <input type="text" readonly="readonly" value="q">
+        </li>
+        <li>
+          <div data-icon="r" class="icon"></div>
+          <input type="text" readonly="readonly" value="r">
+        </li>
+        <li>
+          <div data-icon="s" class="icon"></div>
+          <input type="text" readonly="readonly" value="s">
+        </li>
+        <li>
+          <div data-icon="t" class="icon"></div>
+          <input type="text" readonly="readonly" value="t">
+        </li>
+        <li>
+          <div data-icon="u" class="icon"></div>
+          <input type="text" readonly="readonly" value="u">
+        </li>
+        <li>
+          <div data-icon="v" class="icon"></div>
+          <input type="text" readonly="readonly" value="v">
+        </li>
+        <li>
+          <div data-icon="w" class="icon"></div>
+          <input type="text" readonly="readonly" value="w">
+        </li>
+        <li>
+          <div data-icon="x" class="icon"></div>
+          <input type="text" readonly="readonly" value="x">
+        </li>
+        <li>
+          <div data-icon="y" class="icon"></div>
+          <input type="text" readonly="readonly" value="y">
+        </li>
+        <li>
+          <div data-icon="z" class="icon"></div>
+          <input type="text" readonly="readonly" value="z">
+        </li>
+        <li>
+          <div data-icon="A" class="icon"></div>
+          <input type="text" readonly="readonly" value="A">
+        </li>
+        <li>
+          <div data-icon="B" class="icon"></div>
+          <input type="text" readonly="readonly" value="B">
+        </li>
+        <li>
+          <div data-icon="C" class="icon"></div>
+          <input type="text" readonly="readonly" value="C">
+        </li>
+        <li>
+          <div data-icon="D" class="icon"></div>
+          <input type="text" readonly="readonly" value="D">
+        </li>
+        <li>
+          <div data-icon="E" class="icon"></div>
+          <input type="text" readonly="readonly" value="E">
+        </li>
+        <li>
+          <div data-icon="F" class="icon"></div>
+          <input type="text" readonly="readonly" value="F">
+        </li>
+        <li>
+          <div data-icon="G" class="icon"></div>
+          <input type="text" readonly="readonly" value="G">
+        </li>
+        <li>
+          <div data-icon="H" class="icon"></div>
+          <input type="text" readonly="readonly" value="H">
+        </li>
+        <li>
+          <div data-icon="I" class="icon"></div>
+          <input type="text" readonly="readonly" value="I">
+        </li>
+        <li>
+          <div data-icon="J" class="icon"></div>
+          <input type="text" readonly="readonly" value="J">
+        </li>
+        <li>
+          <div data-icon="K" class="icon"></div>
+          <input type="text" readonly="readonly" value="K">
+        </li>
+        <li>
+          <div data-icon="L" class="icon"></div>
+          <input type="text" readonly="readonly" value="L">
+        </li>
+        <li>
+          <div data-icon="M" class="icon"></div>
+          <input type="text" readonly="readonly" value="M">
         </li>
       </ul>
     </div>
