--- a/src/icons-reference.html
+++ b/src/icons-reference.html
@@ -171,6 +171,90 @@
           <div class="icon icon-sign-out"></div>
           <input type="text" readonly="readonly" value="sign-out">
         </li>
+        <li>
+          <div class="icon icon-lock"></div>
+          <input type="text" readonly="readonly" value="lock">
+        </li>
+        <li>
+          <div class="icon icon-key"></div>
+          <input type="text" readonly="readonly" value="key">
+        </li>
+        <li>
+          <div class="icon icon-envelope-o"></div>
+          <input type="text" readonly="readonly" value="envelope-o">
+        </li>
+        <li>
+          <div class="icon icon-envelope"></div>
+          <input type="text" readonly="readonly" value="envelope">
+        </li>
+        <li>
+          <div class="icon icon-mail"></div>
+          <input type="text" readonly="readonly" value="mail">
+        </li>
+        <li>
+          <div class="icon icon-at-sign"></div>
+          <input type="text" readonly="readonly" value="at-sign">
+        </li>
+        <li>
+          <div class="icon icon-angle-double-left"></div>
+          <input type="text" readonly="readonly" value="angle-double-left">
+        </li>
+        <li>
+          <div class="icon icon-angle-double-right"></div>
+          <input type="text" readonly="readonly" value="angle-double-right">
+        </li>
+        <li>
+          <div class="icon icon-angle-double-up"></div>
+          <input type="text" readonly="readonly" value="angle-double-up">
+        </li>
+        <li>
+          <div class="icon icon-angle-double-down"></div>
+          <input type="text" readonly="readonly" value="angle-double-down">
+        </li>
+        <li>
+          <div class="icon icon-bell"></div>
+          <input type="text" readonly="readonly" value="bell">
+        </li>
+        <li>
+          <div class="icon icon-bell-o"></div>
+          <input type="text" readonly="readonly" value="bell-o">
+        </li>
+        <li>
+          <div class="icon icon-bell-slash"></div>
+          <input type="text" readonly="readonly" value="bell-slash">
+        </li>
+        <li>
+          <div class="icon icon-bell-slash-o"></div>
+          <input type="text" readonly="readonly" value="bell-slash-o">
+        </li>
+        <li>
+          <div class="icon icon-volume-off"></div>
+          <input type="text" readonly="readonly" value="volume-off">
+        </li>
+        <li>
+          <div class="icon icon-volume-down"></div>
+          <input type="text" readonly="readonly" value="volume-down">
+        </li>
+        <li>
+          <div class="icon icon-volume-up"></div>
+          <input type="text" readonly="readonly" value="volume-up">
+        </li>
+        <li>
+          <div class="icon icon-note"></div>
+          <input type="text" readonly="readonly" value="note">
+        </li>
+        <li>
+          <div class="icon icon-volume"></div>
+          <input type="text" readonly="readonly" value="volume">
+        </li>
+        <li>
+          <div class="icon icon-microphone"></div>
+          <input type="text" readonly="readonly" value="microphone">
+        </li>
+        <li>
+          <div class="icon icon-microphone-slash"></div>
+          <input type="text" readonly="readonly" value="microphone-slash">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -329,6 +413,90 @@
         <li>
           <div data-icon="M" class="icon"></div>
           <input type="text" readonly="readonly" value="M">
+        </li>
+        <li>
+          <div data-icon="N" class="icon"></div>
+          <input type="text" readonly="readonly" value="N">
+        </li>
+        <li>
+          <div data-icon="O" class="icon"></div>
+          <input type="text" readonly="readonly" value="O">
+        </li>
+        <li>
+          <div data-icon="P" class="icon"></div>
+          <input type="text" readonly="readonly" value="P">
+        </li>
+        <li>
+          <div data-icon="Q" class="icon"></div>
+          <input type="text" readonly="readonly" value="Q">
+        </li>
+        <li>
+          <div data-icon="R" class="icon"></div>
+          <input type="text" readonly="readonly" value="R">
+        </li>
+        <li>
+          <div data-icon="S" class="icon"></div>
+          <input type="text" readonly="readonly" value="S">
+        </li>
+        <li>
+          <div data-icon="T" class="icon"></div>
+          <input type="text" readonly="readonly" value="T">
+        </li>
+        <li>
+          <div data-icon="U" class="icon"></div>
+          <input type="text" readonly="readonly" value="U">
+        </li>
+        <li>
+          <div data-icon="V" class="icon"></div>
+          <input type="text" readonly="readonly" value="V">
+        </li>
+        <li>
+          <div data-icon="W" class="icon"></div>
+          <input type="text" readonly="readonly" value="W">
+        </li>
+        <li>
+          <div data-icon="X" class="icon"></div>
+          <input type="text" readonly="readonly" value="X">
+        </li>
+        <li>
+          <div data-icon="Y" class="icon"></div>
+          <input type="text" readonly="readonly" value="Y">
+        </li>
+        <li>
+          <div data-icon="Z" class="icon"></div>
+          <input type="text" readonly="readonly" value="Z">
+        </li>
+        <li>
+          <div data-icon="0" class="icon"></div>
+          <input type="text" readonly="readonly" value="0">
+        </li>
+        <li>
+          <div data-icon="1" class="icon"></div>
+          <input type="text" readonly="readonly" value="1">
+        </li>
+        <li>
+          <div data-icon="2" class="icon"></div>
+          <input type="text" readonly="readonly" value="2">
+        </li>
+        <li>
+          <div data-icon="3" class="icon"></div>
+          <input type="text" readonly="readonly" value="3">
+        </li>
+        <li>
+          <div data-icon="4" class="icon"></div>
+          <input type="text" readonly="readonly" value="4">
+        </li>
+        <li>
+          <div data-icon="5" class="icon"></div>
+          <input type="text" readonly="readonly" value="5">
+        </li>
+        <li>
+          <div data-icon="6" class="icon"></div>
+          <input type="text" readonly="readonly" value="6">
+        </li>
+        <li>
+          <div data-icon="7" class="icon"></div>
+          <input type="text" readonly="readonly" value="7">
         </li>
       </ul>
     </div>
